--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     margin: 5px;
     border-radius: 10px;
     background-color: #ebe8e0;
-    font-size: larger;
+    font-size: x-large;
     color: #645d56;
     letter-spacing: 3px;
     text-indent: 15px;
